two-tier/dev/services/vpc/igw.tf
resource "aws_internet_gateway" "igw"{
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "igw-eu-central-1-dev"
    }
}
